# MokioAgent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent-loop/: langgraph_P&E.py  langgraph_Reflection.py
multiagent/: routing&swarm.py
src/llm/: llm.py
src/mokioclaw/: __init__.py  main.py
src/mokioclaw/cli/: app.py
src/mokioclaw/core/: context.py  loop.py  memory.py  project_rules.py  state.py  toolcall_decider.py  types.py
src/mokioclaw/harness/: __init__.py  approvals.py
src/mokioclaw/prompts/: __init__.py  compact_system.jinja2  finalizer_system.jinja2  planner_system.jinja2  react_prompt.py  react_system.jinja2  toolcall.jinja2  toolcall_prompt.py
src/mokioclaw/providers/: ollama_provider.py
src/mokioclaw/tools/: file_tools.py  registry.py  selector.py  session_tools.py  workspace_tools.py
src/mokioclaw/tui/: __init__.py  app.py  mokioclaw.tcss
src/mokioclaw/utils/: __init__.py  json_utils.py
src/prompts/: toolcall.txt
src/tools/: file_tools.py  registry.py
tests/: test_approvals.py  test_cli.py  test_decider_utils.py  test_loop.py  test_project_rules.py  test_provider_env.py  test_react_content.py  test_session_tools.py  test_tool_selector.py  test_tools.py  test_tui.py  test_workspace_tools.py
txt/: a.txt  b.txt
