[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mokio-claw"
version = "0.1.0"
description = "A minimal claw project that evolves from one-step tool calls."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "langgraph-supervisor>=0.0.31",
    "python-dotenv>=1.1.1",
    "rich-pixels>=3.0.1",
    "textual>=8.2.4",
    "typer>=0.16.0",
]

[project.scripts]
mokioclaw = "mokioclaw.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.12.0",
    "ty>=0.0.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mokioclaw"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["*.jinja2"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["mokioclaw"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
root = ["./src"]
